# transcribe_redact_TUI

./: .env  LICENSE  README.md  Whisper_convert.py  Whisper_transcript.py  baseview.py  choose_file.py  choosefile.py  conda_created_requirements_filtered_partly.txt  converter.py  environment.yml  file_handler.py  lang_model_chooser.py  lang_model_prompt_chooser.py  main.py  misc_gui_setter.py  npyscreen_overrides.py  pyproject.toml  redact_text_w_openAI.py  redactor.py  requirements.pipreq.not.complete  requirements.txt  split_files.py  transcribe_redact_TUI.py  transcriptor.py  ui_const.py  util.py
